[FIX] technologies spacing

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -21,7 +21,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
-    row-gap: 15px;
+    row-gap: 25px;
 
     & .text {
       font-size: 16px;
@@ -52,7 +52,7 @@
         color: $primary-color;
         font-size: 25px;
         text-align: center;
-        margin-bottom: 16px;
+        margin-bottom: 25px;
       }
 
       & .skills {
